--- a/src/base.css
+++ b/src/base.css
@@ -13,4 +13,12 @@ body {
   padding: 0;
   font-size: 16px/1.6 sans-serif;
   background: #ddd;
+  color: #333;
+}
+
+@media screen and (prefers-color-scheme: dark) {
+  body {
+    background: #333;
+    color: ddd;
+  }
 }
