--- a/src/base.css
+++ b/src/base.css
@@ -11,7 +11,7 @@ html *::before {
 body {
   margin: 0;
   padding: 0;
-  font-size: 16px/1.6 sans-serif;
+  font: 16px/1.6 sans-serif;
   background: #ddd;
   color: #333;
 }
